Thu Feb 10 19:17:27 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ruby.c (proc_options): Instead of strdup (which causes memory
	  leak), let GC terminate those strings.

	* ruby.c (process_options): ditto.

	* ruby.c (moreswitches): ditto.

Thu Feb 10 18:05:55 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (InitVM_Thread): InitVM_native_thread() shall be called
	  for ALL threads, including the main thread.  All other threads
	  except the main one calls this function via rb_thread_create but
	  the main thread is not invoked that way so the call of this
	  function is needed somewhere.  I'm not sure this is the right
	  position to do so because there might perhaps be a chance for a
	  sugnal pump to touch uninitiaized native thread before this, but
	  I'm totally uncertain.

Thu Feb 10 16:53:14 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (ruby_stop): Should not destruct a VM this case.
	  ruby_stop() is called inside of rb_f_fork()'s child process
	  side.  That case, all native threads except the current one has
	  already been shut down (on POSIX at least).  The problem is,
	  those shut down threads might have holded locks, i.e. there can
	  be locked mutexes and they are not modifiabe.  Destructing a VM
	  should touch them if any.  This process is about to suside so
	  just ignoring those things and leave OS collect them should
	  suffice I believe.

Tue Feb  8 21:02:30 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* bignum.c (power_cache_init): seems like cache_value needs
	  initialization.

Tue Feb  8 16:43:05 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ruby.c (process_options): My valgrind says that this arg0 is
	  freed before it was used.

	* ruby.c (proc_options): ditto.

Tue Feb  8 15:56:40 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread_pthread.c (get_stack): This function seems broken due to
	  merge mistake. Copy & paste form ruby_1_9_2 at revision r30269.
